--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
         <item>Resta</item>
         <item>Multiplicación</item>
         <item>División</item>
+        <item>Potencia</item>
     </string-array>
 </resources>
